display current token angle

--- a/web/index.html
+++ b/web/index.html
@@ -552,9 +552,11 @@
 							<div class="img rotating"></div>
 						</div>
 						<div id="angleArrow" class="movable no-animate-move">
-							<!-- <i class="fas fa-chevron-up arrowEnd"></i> -->
-							<div class="rotating">
+							<div id="angleCurrent" class="rotating">
 								<i class="fas fa-chevron-up arrowEnd"></i>
+							</div>
+							<div class="rotating">
+								<i class="fas fa-up-long arrowEnd"></i>
 							</div>
 						</div>
 					</div>
