include hex grid demo on homepage

--- a/web/index.html
+++ b/web/index.html
@@ -159,7 +159,7 @@
 							disableRemotePlayback></video>
 					</div>
 				</div>
-				<div style="flex-direction: row-reverse;">
+				<div>
 					<div class="info">
 						<h2>Area of Effect</h2>
 						<p>Visualize your <b>spellcasting area</b> in whatever shape you need. Areas are calculated in
@@ -197,7 +197,22 @@
 							disableRemotePlayback></video>
 					</div>
 				</div>
-				<div style="flex-direction: row-reverse;">
+				<div>
+					<div class="info">
+						<h2>Hex Grids</h2>
+						<p>Apart from <b>default squares</b> for grid cells, you can configure your scene to instead use
+							<b>hexagons</b> - either horizontally or vertically aligned.
+						</p>
+						<p>All grid related features are supported on any grid: including but not limited to intuitive
+							token movement, cell snapping, <b>distance measuring and area of effect</b>.
+						</p>
+					</div>
+					<div class="media">
+						<video src="videos/hex.mp4" muted autoplay loop disablePictureInPicture
+							disableRemotePlayback></video>
+					</div>
+				</div>
+				<div>
 					<div class="info">
 						<h2>Fog of War</h2>
 						<p>When planning out a large dungeon, you may not want your players to know what evil creatures
@@ -377,7 +392,7 @@
 						Change Scene Image
 						<i class="fas fa-image"></i>
 					</button>
-					<span>
+					<span class="center">
 						<button id="gridTNone" class="icon with-tooltip">
 							<i class="fas fa-border-none"></i>
 							<span>No Grid</span>
