updated styling of scene selector

--- a/web/index.html
+++ b/web/index.html
@@ -508,7 +508,6 @@
 					</div>
 				</div>
 				<div id="sceneSelector" class="controls panel dm hooked no-edit no-demo panning-only">
-					<h3>Scene Selector</h3>
 					<span class="top-hook">
 						<div>
 							<i class="fas fa-chevron-up"></i>
@@ -516,7 +515,7 @@
 						</div>
 					</span>
 					<div id="scenes">
-						<button id="addScene" class="big">Add Scene</button>
+						<button id="addScene">Add Scene</button>
 					</div>
 				</div>
 				<div id="board">
