move conditions component into separate file

--- a/web/index.html
+++ b/web/index.html
@@ -490,12 +490,10 @@
 							Conditions
 							<a id="clearConditions">Clear all</a>
 						</span>
-						<div id="activeConds" class="toolbox popup-container">
-							<i class="fas fa-plus"></i>
-							<button id="addCondition" class="icon">
-								<i class="fas fa-plus"></i>
-							</button>
-							
+						<div id="selectionConditions" class="toolbox popup-container toolbox-grid">
+							<div id="activeConds" class="wrapper"></div>
+
+							<i id="addCondition" class="fas fa-plus"></i>
 							<div id="conds" class="popup-panel panel"></div>
 						</div>
 						<div class="left-col">
