improve conditions layout

--- a/web/index.html
+++ b/web/index.html
@@ -490,11 +490,15 @@
 							Conditions
 							<a id="clearConditions">Clear all</a>
 						</span>
-						<div id="selectionConditions" class="toolbox popup-container toolbox-grid">
-							<div id="activeConds" class="wrapper"></div>
-
-							<i id="addCondition" class="fas fa-plus"></i>
-							<div id="conds" class="popup-panel panel"></div>
+						<div class="popup-container">
+							<div id="selectionConditions" class="toolbox toolbox-grid">
+								<div id="activeConds" class="wrapper"></div>
+	
+								<i id="addCondition" class="fas fa-plus interactable with-tooltip">
+									<span>Add</span>
+								</i>
+								<div id="conds" class="popup-panel panel"></div>
+							</div>
 						</div>
 						<div class="left-col">
 							<button id="movableInvisible" class="icon elevate with-tooltip toggle">
