introduce token bars (for quick configuration)

--- a/web/index.html
+++ b/web/index.html
@@ -500,6 +500,13 @@
 								<div id="conds" class="popup-panel panel"></div>
 							</div>
 						</div>
+						<div>
+							<span class="space-between">
+								Bars
+								<a id="configureBars">Configure</a>
+							</span>
+							<ul id="selectionBars" class="no-inset settings-list"></ul>
+						</div>
 						<div class="left-col">
 							<button id="movableInvisible" class="icon elevate with-tooltip toggle">
 								<i class="fas fa-eye"></i>
@@ -513,9 +520,6 @@
 								<i class="fas fa-trash"></i>
 								<span>Remove from Scene</span>
 							</button>
-						</div>
-						<div id="bars">
-							
 						</div>
 					</div>
 				</div>
