introduce token bar add button

--- a/web/index.html
+++ b/web/index.html
@@ -503,6 +503,7 @@
 						<div>
 							<span>Bars</span>
 							<ul id="selectionBars" class="no-inset settings-list"></ul>
+							<button id="barAddButton" class="elevate">Add Token Bar</button>
 							<div id="barConfiguration" class="popup-panel anchor-left panel">
 								<label>
 									Label:
