introduce "remove bar" button

--- a/web/index.html
+++ b/web/index.html
@@ -511,7 +511,6 @@
 								</label>
 
 								<div>
-									<label>Visibility</label>
 									<div id="barConfigVisibility" class="segmented-button">
 										<button class="icon with-tooltip active">
 											<span>Visible to All</span>
@@ -527,6 +526,8 @@
 										</button>
 									</div>
 								</div>
+
+								<button id="barRemoveButton" class="bad">Remove From Token</button>
 							</div>
 						</div>
 						<div class="left-col">
