turn tokens/prefabs into component lists

--- a/web/index.html
+++ b/web/index.html
@@ -448,7 +448,8 @@
 							<p>Players</p>
 							<div id="pcPrefabs" class="tile-container prefab-container"></div>
 							<p>Custom</p>
-							<div id="otherPrefabs" class="tile-container prefab-container">
+							<div class="tile-container prefab-container">
+								<div id="otherPrefabs" class="wrapper"></div>
 								<button id="addPrefab" class="icon with-tooltip">
 									<i class="fas fa-plus"></i>
 									<span>Add Token</span>
