introduce token bar color palette

--- a/web/index.html
+++ b/web/index.html
@@ -513,6 +513,10 @@
 								</label>
 
 								<div>
+									<div id="barConfigColor" class="color-palette"></div>
+								</div>
+
+								<div>
 									<div id="barConfigVisibility" class="segmented-button">
 										<button class="icon with-tooltip active">
 											<span>Visible to All</span>
