allow ping & goto movable objects and sync it with others players

--- a/web/index.html
+++ b/web/index.html
@@ -494,7 +494,7 @@
 						<div class="popup-container">
 							<div id="selectionConditions" class="tile-container toolbox">
 								<div id="activeConds" class="wrapper"></div>
-	
+
 								<button id="addCondition" class="icon with-tooltip">
 									<span>Add</span>
 									<i class="fas fa-plus"></i>
@@ -544,6 +544,14 @@
 							<button id="movableSnap" class="icon elevate with-tooltip">
 								<i class="fas fa-arrows-to-dot"></i>
 								<span>Snap to Grid</span>
+							</button>
+							<button id="movablePing" class="icon elevate with-tooltip">
+								<i class="fas fa-circle-dot"></i>
+								<span>Ping</span>
+							</button>
+							<button id="movableGoTo" class="icon elevate with-tooltip">
+								<i class="fas fa-location-crosshairs"></i>
+								<span>Go To</span>
 							</button>
 							<button id="movableRemove" class="icon elevate with-tooltip">
 								<i class="fas fa-trash"></i>
