implement backend for recovery event

--- a/mail/restore.html
+++ b/mail/restore.html
@@ -34,19 +34,13 @@
 								</td>
 							</tr>
 							<tr>
-								<td style="padding: 16px 0;">
-									If you weren't trying to sign up, you can safely ignore this email. Your address is
-									not stored until you actually get an account.
-								</td>
-							</tr>
-							<tr>
-								<td>
+								<td style="padding: 20px 0 0 0;">
 									Have fun playing!
 								</td>
 							</tr>
 							<tr>
 								<td style="color: #666666; padding: 4px 0 0 0;">
-									» Your local dungeon mailman
+									» doodlezucc
 								</td>
 							</tr>
 						</table>
