add email layout for repaired accounts

--- a/mail/notification_campaigns_repaired.html
+++ b/mail/notification_campaigns_repaired.html
@@ -13,7 +13,7 @@
 							</tr>
 							<tr>
 								<td style="font-size: 20px; padding: 20px 0;" align="center">
-									Recovery of your Account
+									Your Account has been Repaired
 								</td>
 							</tr>
 							<tr>
@@ -26,30 +26,25 @@
 							</tr>
 							<tr>
 								<td style="padding: 16px 0;">
-									I'm doodlezucc, developer of the virtual tabletop <b>Dungeon Club</b>. If I'm not mistaken, you've registered an account in the last three months
-									and are affected by a certain software bug.
+									You might have noticed some oddities in the list of campaigns when logging into your <b>Dungeon Club</b>
+									account these last few weeks.
 								</td>
 							</tr>
 							<tr>
 								<td>
-									Your account got unregistered on the server by accident.
-									All your campaigns are alive and well! However, they're currently in an orphan state,
-									with <b>no assigned game owner</b>. They're basically in limbo.
+									This mail is to inform you that all campaigns which unexpectedly disappeared are now back.
+									Campains which might have been showing up despite being deleted should also be repaired.
 								</td>
 							</tr>
 							<tr>
 								<td style="padding: 16px 0;">
-									It's no big hassle, really: to regain access to your account and campaigns,
-									you can either reset your password on the website or re-register the account at this link:
+									Specifically, here's the list of restorations made to your account:
+									<br><br>
+									$SUMMARY
 								</td>
 							</tr>
 							<tr>
 								<td>
-									<a href="$URL">$URL</a>
-								</td>
-							</tr>
-							<tr>
-								<td style="padding: 16px 0;">
 									<b>Some details on what happened:</b><br>
 									An unhandled error in the server code caused the
 									periodic auto-save to stop auto-saving the account database. The same
@@ -57,7 +52,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td>
+								<td style="padding: 16px 0;">
 									At the start of May, the server was forcefully shut down and restarted by what seems to have
 									been a denial of service attack. Due to the last backup dating back to March 6th,
 									all <b>account related</b> changes between the auto-save and the shutdown had been undone.
@@ -66,15 +61,15 @@
 								</td>
 							</tr>
 							<tr>
-								<td style="padding: 16px 0;">
+								<td>
 									By running a bunch of simulations on the pseudonymized server logs and by making a few
 									educated guesses, relationships between accounts and created campaigns affected by the memory gap
 									could eventually be established and were restored in the database.
 								</td>
 							</tr>
 							<tr>
-								<td>
-									If you find any campaigns missing from your account, please don't hesitate to reach out by replying to this
+								<td style="padding: 16px 0 0 0;">
+									If you find any campaigns still missing from your account, please don't hesitate to reach out by replying to this
 									email or joining the community Discord server.
 								</td>
 							</tr>
@@ -87,7 +82,7 @@
 							</tr>
 							<tr>
 								<td style="color: #666666; padding: 4px 0 0 0;">
-									» doodlezucc
+									» doodlezucc (creator of dungeonclub.net)
 								</td>
 							</tr>
 						</table>
