new incident just dropped

--- a/mail/notification_lost_account.html
+++ b/mail/notification_lost_account.html
@@ -26,7 +26,7 @@
 							</tr>
 							<tr>
 								<td style="padding: 16px 0;">
-									I'm doodlezucc, developer of the virtual tabletop <b>Dungeon Club</b>. If I'm not mistaken, you've registered an account in the last three months
+									I'm doodlezucc, developer of the virtual tabletop <b>Dungeon Club</b>. If I'm not mistaken, you've registered an account in the last three weeks
 									and are affected by a certain software bug.
 								</td>
 							</tr>
@@ -58,8 +58,7 @@
 							</tr>
 							<tr>
 								<td>
-									At the start of May, the server was forcefully shut down and restarted by what seems to have
-									been a denial of service attack. Due to the last backup dating back to March 6th,
+									Early in the morning today, the server had apparently shut down unexpectedly. Due to the last backup dating back to October 22nd,
 									all <b>account related</b> changes between the auto-save and the shutdown had been undone.
 									To be clear, this "memory gap" did not revert the actual contents of any campaign, only their
 									individual assigned owners.
